feat(agents): Implement TEE-based authentication for ERC-8004 agents
- Add TEE-enabled agent classes (tee_base_agent.py, tee_server_agent.py, tee_validator_agent.py)
- Implement secure key derivation using dstack SDK get_key() function
- Replace environment variable private keys with deterministic TEE key generation
- Add comprehensive test coverage for TEE authentication workflow
- Maintain backward compatibility with traditional PRIVATE_KEY mode
- Support both TEE mode (USE_TEE_AUTH=true) and legacy mode
- Follow official dstack SDK documentation for proper implementation
- Use DstackClient and get_quote() for attestation
- Configure proper socket path (/var/run/dstack.sock)

This implementation enhances security by leveraging Trusted Execution Environment
capabilities while maintaining compatibility with existing agent deployments.

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,21 @@ validations/*.json
 !validations/.gitkeep 
 
 data
+
+logs
+dev-debug.log
+# Dependency directories
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+
+# Task files
+# tasks.json
+# tasks/ 
