--- a/pytest.ini
+++ b/pytest.ini
@@ -9,28 +9,41 @@ python_functions = test_*
 # Test directories
 testpaths = tests
 
-# Markers for test categorization
+# Markers for test categories
 markers =
-    unit: Unit tests that don't require blockchain
-    integration: Integration tests requiring blockchain
-    e2e: End-to-end tests for complete workflows
-    slow: Tests that take more than 5 seconds
+    unit: Unit tests - fast, isolated tests
+    integration: Integration tests - test component interactions
+    e2e: End-to-end tests - full workflow tests
+    slow: Slow tests - tests that take >1s
+    tee: TEE-specific tests - require TEE simulator
+    blockchain: Blockchain tests - require Anvil running
+    api: API tests - test REST endpoints
+    asyncio: Async tests - tests using async/await
     
 # Output options
 addopts = 
+    -ra
     --strict-markers
     --tb=short
     --color=yes
-    -ra
+
+# Warning filters
+filterwarnings =
+    # Ignore websockets legacy deprecation warning
+    ignore::DeprecationWarning:websockets.legacy
+    # Ignore Pydantic serialization warnings from CrewAI
+    ignore:Pydantic serializer warnings:UserWarning:pydantic.main
+    # Ignore datetime.utcnow deprecation warnings
+    ignore:datetime.datetime.utcnow.*is deprecated:DeprecationWarning
     
 # Coverage options
 [coverage:run]
-source = agents
+source = agents,api
 omit = 
-    */tests/*
-    */__pycache__/*
+    tests/*
     */test_*.py
-
+    */__pycache__/*
+    
 [coverage:report]
 exclude_lines =
     pragma: no cover
@@ -38,5 +51,4 @@ exclude_lines =
     raise AssertionError
     raise NotImplementedError
     if __name__ == .__main__.:
-    if TYPE_CHECKING:
-    @abstractmethod
+    pass
