--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,8 @@ services:
     
     # TEE socket mounting for attestation
     volumes:
-      - /var/run/dstack.sock:/var/run/dstack.sock  # Phala Cloud TEE socket
+      - /var/run/dstack.sock:/var/run/dstack.sock  # Phala Cloud TEE socket (dstack v0.5.x)
+      - /var/run/tappd.sock:/var/run/tappd.sock  # Phala Cloud TEE socket (dstack < v0.5.x)
     
     # Network configuration
     ports:
@@ -38,6 +39,42 @@ services:
     # Health check using Flox activate
     healthcheck:
       test: ["CMD", "/nix/store/ic29r7ab9lpbhan7icxkb096qkmhzwzc-environment-develop/activate", "-c", "python -c 'import sys; sys.exit(0)'"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # FastAPI Service for agent endpoints
+  api:
+    image: erc-8004-ex-phala:erc8004-phala
+    container_name: erc8004-api
+    
+    environment:
+      - API_HOST=0.0.0.0
+      - API_PORT=8000
+      - USE_TEE_AUTH=${USE_TEE_AUTH:-false}
+      - API_TOKEN=${API_TOKEN}
+      - RPC_URL=${RPC_URL}
+      - SERVER_AGENT_PRIVATE_KEY=${SERVER_AGENT_PRIVATE_KEY}
+      - VALIDATOR_AGENT_PRIVATE_KEY=${VALIDATOR_AGENT_PRIVATE_KEY}
+      - CLIENT_AGENT_PRIVATE_KEY=${CLIENT_AGENT_PRIVATE_KEY}
+      - SERVER_AGENT_SALT=${SERVER_AGENT_SALT}
+      - VALIDATOR_AGENT_SALT=${VALIDATOR_AGENT_SALT}
+      - CLIENT_AGENT_SALT=${CLIENT_AGENT_SALT}
+    
+    volumes:
+      - /var/run/dstack.sock:/var/run/dstack.sock
+      - /var/run/tappd.sock:/var/run/tappd.sock
+    
+    ports:
+      - "8000:8000"  # API endpoint
+    
+    command: ["python", "run_api.py"]
+    
+    restart: unless-stopped
+    
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
