🔒 SECURITY: Remove private keys from git history and improve wallet security
- Remove genesis_wallets.json from entire git history using filter-branch
- Add comprehensive wallet file patterns to .gitignore
- Create genesis_wallets.json.example template for secure setup
- Update README with security warnings and setup instructions
- Prevent future accidental commits of private keys

BREAKING: All previous private keys should be considered compromised

--- a/.gitignore
+++ b/.gitignore
@@ -193,6 +193,12 @@ keys/
 *.p12
 *.pfx
 
+# Wallet files with private keys
+genesis_wallets.json
+*_wallets.json
+wallet_*.json
+private_keys.json
+
 # Deployment artifacts
 deployment.json
 deployments/
