update sdk usage

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # === CHAOSCHAIN GENESIS STUDIO CONFIGURATION ===
+# Copy this file to .env and fill in your values
 
 # --- Blockchain Configuration ---
 # Choose your network: "local", "sepolia", "base-sepolia", "optimism-sepolia"
@@ -24,21 +25,18 @@ OPTIMISM_SEPOLIA_RPC_URL=https://sepolia.optimism.io
 OPTIMISM_SEPOLIA_PRIVATE_KEY=0xYOUR_OPTIMISM_SEPOLIA_PRIVATE_KEY_HERE
 OPTIMISM_SEPOLIA_CHAIN_ID=11155420
 
-# --- Coinbase AgentKit Configuration ---
-# Get these from: https://portal.cdp.coinbase.com
+# --- ChaosChain SDK Configuration ---
+# The SDK handles wallet management automatically, but you can override with CDP
+# Get these from: https://portal.cdp.coinbase.com (Optional)
 CDP_API_KEY_ID=your_cdp_api_key_id_here
 CDP_API_KEY_SECRET=your_cdp_api_key_secret_here
 CDP_WALLET_SECRET=your_cdp_wallet_secret_here
 
-# --- IPFS Storage Configuration (Pinata) ---
+# --- IPFS Storage Configuration (Optional - SDK works vendor-free) ---
 # Get these from: https://app.pinata.cloud/keys
+# Leave empty to use local IPFS or vendor-free mode
 PINATA_JWT=your_pinata_jwt_token_here
 PINATA_GATEWAY=your-gateway.mypinata.cloud
-
-# --- Story Protocol IP Registration (Crossmint) ---
-# Get these from: https://www.crossmint.com/console
-CROSSMINT_API_KEY=your_crossmint_api_key_here
-CROSSMINT_PROJECT_ID=your_crossmint_project_id_here
 
 # --- Agent Configuration ---
 AGENT_DOMAIN_ALICE=alice.genesis-studio.com
@@ -52,15 +50,15 @@ AGENT_DOMAIN_CHARLIE=charlie.genesis-studio.com
 
 # --- USDC Contract Address (Base Sepolia) ---
 USDC_CONTRACT_ADDRESS=0x036CbD53842c5426634e7929541eC2318f3dCF7e
-# ============================================================================
-# Treasury address for protocol fees
+
+# --- Treasury Configuration ---
+# Treasury address for protocol fees (SDK uses default if not set)
+TREASURY_ADDRESS=0x20E7B2A2c8969725b88Dd3EF3a11Bc3353C83F70
 CHAOSCHAIN_TREASURY_ADDRESS=chaoschain.eth
 
 # Protocol fee percentage (2.5% = 2.5)
 TRANSACTION_FEE_PERCENTAGE=2.5
 
-# ============================================================================
-# DEVELOPMENT SETTINGS
-# ============================================================================
-DEBUG=false
-SKIP_STORY_PROTOCOL=true
+# --- SDK Feature Toggles ---
+ENABLE_PROCESS_INTEGRITY=true
+ENABLE_AP2=true
