--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,8 @@
-# Genesis Studio Dependencies
-crewai>=0.165.1
-web3>=6.0.0
-python-dotenv>=1.0.0
-requests>=2.31.0
-pydantic>=2.0.0
+# ChaosChain SDK - Core dependency
+chaoschain-sdk>=0.1.2
 
-# Genesis Studio - Rich CLI Interface
-rich>=13.7.0
+# CrewAI for AI agent orchestration (used in Genesis Studio demo)
+crewai>=0.201.0
 
-# Genesis Studio - Coinbase AgentKit for Wallet Management
-cdp-sdk>=0.0.7
-
-# Genesis Studio - IPFS Storage via Pinata (using requests for API calls)
-# No separate pinata package needed - we'll use requests directly
-
-# Genesis Studio - x402 Payment Protocol Integration
-x402>=0.2.1
-
-# Production-Ready Security & Cryptography
-cryptography>=41.0.0
-PyJWT>=2.8.0
-
-# Google AP2 Integration (Official Library)
-git+https://github.com/google-agentic-commerce/AP2.git@main
-
-# Additional Production Dependencies
-pathlib2>=2.3.7; python_version < '3.4' 
+# Optional: Google AP2 integration (manual installation required)
+Install with: pip install git+https://github.com/google-agentic-commerce/AP2.git@main
