--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-# Core dependencies
 web3>=6.0.0
 eth-account>=0.8.0
 python-dotenv>=1.0.0
-dstack-sdk>=0.2.0  # Updated for proper get_key and get_quote methods
-
-# Async support
+dstack-sdk>=0.2.0
 aiohttp>=3.8.0
-
-# Utilities
 pydantic>=2.0.0
 typing-extensions>=4.5.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+eth-utils>=2.2.0
 
 # Optional: AI capabilities (install with pip install -e .[ai])
 # openai>=1.0.0
