Add UPDATE_CODE flag for code updates on restart

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ AGENT_PORT=8000
 
 # Phala Cloud Deployment
 PHALA_CLOUD_API_KEY=
+
+# Update Code (set to true to pull latest code on restart)
+UPDATE_CODE=false
