--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and fill in your values
 
 # --- Blockchain Configuration ---
-# Choose your network: "local", "sepolia", "base-sepolia", "optimism-sepolia"
+# Choose your network: "local", "sepolia", "0g-testnet", "base-sepolia", "optimism-sepolia"
 NETWORK=base-sepolia
 
 # -- Local Anvil Configuration --
@@ -15,10 +15,16 @@ SEPOLIA_RPC_URL=https://rpc.sepolia.org
 SEPOLIA_PRIVATE_KEY=0xYOUR_SEPOLIA_PRIVATE_KEY_HERE
 SEPOLIA_CHAIN_ID=11155111
 
-# -- Base Sepolia Configuration (Recommended for Genesis Studio) --
+# -- Base Sepolia Configuration  --
 BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
 BASE_SEPOLIA_PRIVATE_KEY=0xYOUR_BASE_SEPOLIA_PRIVATE_KEY_HERE
 BASE_SEPOLIA_CHAIN_ID=84532
+
+# -- 0G Testnet Configuration (Recommended for Genesis Studio) --
+ZEROG_TESTNET_RPC_URL=https://evmrpc-testnet.0g.ai
+ZEROG_TESTNET_PRIVATE_KEY=YOUR_PRIVATE_KEY_HERE
+ZEROG_TESTNET_CHAIN_ID=16602
+ZEROG_INDEXER_RPC=https://indexer-storage-testnet-turbo.0g.ai
 
 # -- Optimism Sepolia Configuration --
 OPTIMISM_SEPOLIA_RPC_URL=https://sepolia.optimism.io
